--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>Projet_dar</groupId>
@@ -24,6 +23,23 @@
 					<warSourceDirectory>WebContent</warSourceDirectory>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<configuration>
+					<webResources>						                       
+						<resource>						                           
+							<directory>${project.basedir}/lib</directory>							                           
+							<targetPath>WEB-INF/lib</targetPath>							                           
+							<filtering>false</filtering>				                           
+							<includes>	                               
+								<include>**/*.jar</include>				                           
+							</includes>				                       
+						</resource>			                   
+					</webResources>
+				</configuration>
+				<version>2.1.1</version>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
@@ -42,6 +58,24 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.ebay</groupId>
+			<artifactId>finding</artifactId>
+			<version>0.0.1</version>
+			<scope>system</scope>
+	        <systemPath>${project.basedir}/lib/finding.jar</systemPath>
+		</dependency>
 
+
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20151123</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.ecf</groupId>
+			<artifactId>org.apache.log4j</artifactId>
+			<version>1.2.15.v201012070815</version>
+		</dependency>
 	</dependencies>
 </project>
