projet dar a tester

--- a/.classpath
+++ b/.classpath
@@ -18,5 +18,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/finding.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Admin/Downloads/jstl-1.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
